# COINES_SDK

./: .gitmodules  COINES_SDK_SoftwareLicenseAgreement.txt  LICENSES.txt  README.md  ReleaseNotes.txt  coines.mk
.github/workflows/: mkdocs-deploy.yml  workflow.yml
coines-api/: Makefile  README.md  coines.h  coines_common.c  coines_common.h
coines-api/common/: mcu_app3x.c  mcu_app3x.h  mcu_app3x_interface.c  mcu_app3x_interface.h  mcu_app3x_stream.c  mcu_app3x_stream.h  mcu_app3x_support.c  mcu_app3x_support.h
coines-api/mcu_app20/: NOTE.txt  README.md  mcu_app20.c  mcu_app20.h  mcu_app20.mk  mcu_app20_flash.ld  mcu_app20_flash_coines_bridge.ld  mcu_app20_ram.ld
coines-api/mcu_app30/: README.md  mcu_app30.mk
coines-api/mcu_app31/: README.md  mcu_app31.mk
coines-api/mcu_hear3x/: mcu_hear3x.mk
coines-api/mcu_nicla/: README.md  mcu_nicla.c  mcu_nicla.h  mcu_nicla.mk  mcu_nicla_interface.c  mcu_nicla_interface.h  mcu_nicla_support.c  mcu_nicla_support.h
coines-api/pc/: CMakeLists.txt  README.md  coines.c  coines_bridge.c  coines_bridge.h  coines_defs.h  pc.mk
coines-api/pc/python/: Coinespy_description.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  ReleaseNotes.txt  pyproject.toml  requirements.txt  setup.py
coines-api/pc/python/coinespy/: __init__.py  __main__.py  coines.py  libcoines_arm_32.dylib  libcoines_arm_64.dylib  libcoines_i386_32.dylib  libcoines_i386_64.dylib
driver/linux/: bst_coines.rules
examples/: README.md
examples/c/: README.md
examples/python/: README.md  bma400_simple_sensor_data_readout.py  coinespy_intf_args_test.py  coinespy_test.py  requirements.txt
firmware/: README.md
firmware/nicla/: prepare_nicla.bat
installer_scripts/Windows/: ble_dependency_verifier.bat  ble_env_path_remover.bat  ble_env_path_setter.bat
libraries/circular_buffer/: circular_buffer.c  circular_buffer.h
libraries/ext_temperature/: ext_temperature.c  ext_temperature.h
libraries/freeRTOS/: freertos_dependencies.mk
libraries/i2c_common/: i2c_common.c  i2c_common.h
libraries/job_queue/: job_queue.c  job_queue.h
libraries/mbuf/: mbuf.c  mbuf.h
libraries/mqueue/: mqueue.c  mqueue.h
libraries/mqueue_host/: mqueue.c  mqueue.h
libraries/nicla_sense_ext_flash/: mx25_ext_flash.c  mx25_ext_flash.h
libraries/nicla_sense_led/: led.c  led.h  led_defs.h
libraries/nrf52_ble_service/: ble_service.c  ble_service.h
libraries/nrf52_eeprom/: app30_eeprom.c  app30_eeprom.h
libraries/pmic_bq25120/: bq25120.c  bq25120.h  (+1 more)
(+663 files in other folders)
