[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "twine"
]
build-backend = "setuptools.build_meta"

[project]
name = "coinespy"
version = "1.0.0"
authors = [
  { name="Bosch Sensortec GmbH", email="contact@bosch-sensortec.com" },
]
description = "Python wrapper for coinesAPI"
readme = "Coinespy_description.md"
requires-python = ">=2.6, <4"
dependencies = [
                "flake8",
                "lizard",
                "pytest",
                "pytest-cov",
                "pytest-html"
                ]


classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 2",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X"
]

[project.urls]
"Homepage" = "https://www.bosch-sensortec.com/"
"Source code" = "https://github.com/boschsensortec/COINES"

[tool.setuptools.package-data]
coinespy = ["libcoines_64.dll",
         "libcoines_32.dll",
         "libcoines_64.so",
         "libcoines_32.so",
         "libcoines_arm_64.dylib",
         "libcoines_arm_32.dylib",
         "libcoines_i386_64.dylib",
         "libcoines_i386_32.dylib",
         "libcoines_armv7_32.so",
         "*.py"]
